set error messages to display

--- a/config/locales/views/shared/navbar/en.yml
+++ b/config/locales/views/shared/navbar/en.yml
@@ -1,8 +1,9 @@
 en: 
   shared:
     navbar:
-      app_name: "Challenge"
       sign_in: "Sign in"
       sign_out: "Sign out"
       add_client: "Add"
       list_clients: "Clients"
+    error_messages: 
+      validation_failed: "Sorry"
