--- a/config/locales/views/shared/navbar/en.yml
+++ b/config/locales/views/shared/navbar/en.yml
@@ -1,8 +1,7 @@
 en: 
   shared:
     navbar:
-      sign_in: "Sign in"
-      sign_out: "Sign out"
+      sign_out: "Sign Out"
       add_client: "Add"
       list_clients: "Clients"
     error_messages: 
