remove useless text

--- a/config/locales/views/shared/navbar/en.yml
+++ b/config/locales/views/shared/navbar/en.yml
@@ -1,8 +1,7 @@
 en: 
   shared:
     navbar:
-      sign_out: "Sign Out"
-      add_client: "Add"
+      sign_out: "Signout"
       list_clients: "Clients"
     error_messages: 
       validation_failed: "Sorry"
