--- a/config/locales/views/clients/en.yml
+++ b/config/locales/views/clients/en.yml
@@ -7,7 +7,8 @@ en:
       phone: "(xx) xxxx-xxxx"
       submit: "Save"
     index:
-      header: "Clients" 
+      header: "Clients"
+      empty: "List Empty" 
     edit:
       header: "Edit"
       back: "Cancel" 
