--- a/config/locales/views/shared/navbar/en.yml
+++ b/config/locales/views/shared/navbar/en.yml
@@ -1,7 +1,7 @@
 en: 
   shared:
     navbar:
-      sign_out: "Signout"
+      sign_out: "Logout"
       list_clients: "Clients"
     error_messages: 
       validation_failed: "Sorry"
