--- a/config/locales/views/shared/navbar/en.yml
+++ b/config/locales/views/shared/navbar/en.yml
@@ -4,4 +4,4 @@ en:
       sign_out: "Logout"
       list_clients: "Clients"
     error_messages: 
-      validation_failed: "Sorry"
+      validation_failed: "Sorry!"
