add 'new contact' link to empty lists/table

--- a/config/locales/views/clients/en.yml
+++ b/config/locales/views/clients/en.yml
@@ -8,7 +8,7 @@ en:
       submit: "Save"
     index:
       legend: "Name"
-      empty: "List Empty"
+      empty: "Try adding a new contact!"
       confirmation: "Are you sure?"
     edit:
       legend: "Edit"
